// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatView > Snapshots > should match snapshot for empty conversation 1`] = `<div />`;

exports[`ChatView > Snapshots > should match snapshot with messages 1`] = `
<div>
  <div
    class="flex flex-col h-full min-h-0 relative"
  >
    <header
      class="h-14  px-4 flex items-center border-b border-fluux-bg shadow-sm gap-3"
    >
      <div
        data-testid="avatar"
      >
        Alice Smith
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h2
          class="font-semibold text-fluux-text truncate leading-tight"
        >
          Alice Smith
        </h2>
        <p
          class="text-xs text-fluux-muted truncate"
        >
          Online
        </p>
      </div>
    </header>
    <div
      class="focus-zone flex-1 flex flex-col min-h-0 p-1"
      tabindex="0"
    >
      <div
        class="relative flex-1 flex flex-col min-h-0"
      >
        <div
          class="flex-1 overflow-y-auto overflow-x-hidden px-4 pt-4 pb-0 overscroll-contain"
          style="overflow-anchor: auto;"
        >
          <div>
            <div
              class="flex justify-center py-3"
            >
              <button
                class="flex items-center gap-1 px-3 py-1.5 text-xs rounded-full transition-colors text-fluux-muted hover:text-fluux-text hover:bg-fluux-hover"
              >
                <span
                  data-testid="icon-chevron-up"
                >
                  Up
                </span>
                chat.loadEarlierMessages
              </button>
            </div>
            <div>
              <div
                data-date-separator="10:00"
              >
                <div
                  class="flex items-center gap-4 h-12"
                >
                  <div
                    class="flex-1 h-px bg-fluux-hover"
                  />
                  <span
                    class="text-xs font-semibold text-fluux-muted whitespace-nowrap"
                  >
                    Today
                  </span>
                  <div
                    class="flex-1 h-px bg-fluux-hover"
                  />
                </div>
              </div>
              <div
                data-message-id="msg-1"
              >
                <div
                  class="group flex gap-4  -mx-4 px-4 py-0.5 transition-colors pt-4"
                  data-message-body="Hello there!"
                  data-message-from="Alice Smith"
                  data-message-id="msg-1"
                  data-message-time="10:00"
                >
                  <div
                    class="w-10 flex-shrink-0"
                  >
                    <div
                      class="inline-flex"
                    >
                      <div
                        class="select-none"
                      >
                        <div
                          data-testid="avatar"
                        >
                          Alice Smith
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="relative flex-1 min-w-0 "
                  >
                    <div
                      class="absolute -top-7 -right-2 p-4 z-20 select-none opacity-0 pointer-events-none"
                    >
                      <div
                        class="flex items-center bg-fluux-bg rounded-md shadow-lg border border-fluux-hover transition-opacity"
                      >
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          👍
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          ❤️
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          😂
                        </button>
                        <div
                          class="w-px h-5 bg-fluux-hover"
                        />
                        <div
                          class="relative"
                        >
                          <button
                            aria-label="chat.moreReactions"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                          >
                            <span
                              data-testid="icon-emoji"
                            >
                              Emoji
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.reply"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                          >
                            <span
                              data-testid="icon-reply"
                            >
                              Reply
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.forwardMessage"
                            class="p-1.5 transition-colors opacity-50 cursor-not-allowed hover:bg-fluux-hover"
                            disabled=""
                          >
                            <span
                              data-testid="icon-forward"
                            >
                              Forward
                            </span>
                          </button>
                        </div>
                        <div
                          class="relative"
                        >
                          <div
                            class="inline-flex"
                          >
                            <button
                              aria-label="chat.moreOptions"
                              class="p-1.5 transition-colors hover:bg-fluux-hover opacity-50 cursor-not-allowed"
                              disabled=""
                            >
                              <span
                                data-testid="icon-more"
                              >
                                More
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-baseline gap-2 pb-1 flex-wrap"
                    >
                      <div
                        class="inline-flex"
                      >
                        <span
                          class="font-medium cursor-default"
                          style="color: rgb(0, 0, 0);"
                        >
                          Alice Smith
                        </span>
                      </div>
                      <span
                        class="text-xs text-fluux-muted"
                      >
                        10:00
                      </span>
                    </div>
                    <div
                      class="text-fluux-text break-words whitespace-pre-wrap leading-[1.375]"
                    >
                      Hello there!
                    </div>
                    <div
                      data-testid="message-attachments"
                    >
                      Attachments
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-message-id="msg-2"
              >
                <div
                  class="group flex gap-4  -mx-4 px-4 py-0.5 transition-colors pt-4"
                  data-message-body="Hi! How are you?"
                  data-message-from="Me"
                  data-message-id="msg-2"
                  data-message-time="10:00"
                >
                  <div
                    class="w-10 flex-shrink-0"
                  >
                    <div
                      class="inline-flex"
                    >
                      <div
                        class="select-none"
                      >
                        <div
                          data-testid="avatar"
                        >
                          Me
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="relative flex-1 min-w-0 "
                  >
                    <div
                      class="absolute -top-7 -right-2 p-4 z-20 select-none opacity-0 pointer-events-none"
                    >
                      <div
                        class="flex items-center bg-fluux-bg rounded-md shadow-lg border border-fluux-hover transition-opacity"
                      >
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          👍
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          ❤️
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 transition-colors text-base hover:bg-fluux-hover "
                        >
                          😂
                        </button>
                        <div
                          class="w-px h-5 bg-fluux-hover"
                        />
                        <div
                          class="relative"
                        >
                          <button
                            aria-label="chat.moreReactions"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                          >
                            <span
                              data-testid="icon-emoji"
                            >
                              Emoji
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.editMessage"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                          >
                            <span
                              data-testid="icon-edit"
                            >
                              Edit
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.forwardMessage"
                            class="p-1.5 transition-colors opacity-50 cursor-not-allowed hover:bg-fluux-hover"
                            disabled=""
                          >
                            <span
                              data-testid="icon-forward"
                            >
                              Forward
                            </span>
                          </button>
                        </div>
                        <div
                          class="relative"
                        >
                          <div
                            class="inline-flex"
                          >
                            <button
                              aria-label="chat.moreOptions"
                              class="p-1.5 transition-colors hover:bg-fluux-hover "
                            >
                              <span
                                data-testid="icon-more"
                              >
                                More
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-baseline gap-2 pb-1 flex-wrap"
                    >
                      <div
                        class="inline-flex"
                      >
                        <span
                          class="font-medium cursor-default"
                          style="color: var(--fluux-green);"
                        >
                          Me
                        </span>
                      </div>
                      <span
                        class="text-xs text-fluux-muted"
                      >
                        10:00
                      </span>
                    </div>
                    <div
                      class="text-fluux-text break-words whitespace-pre-wrap leading-[1.375]"
                    >
                      Hi! How are you?
                    </div>
                    <div
                      data-testid="message-attachments"
                    >
                      Attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-4"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="message-composer"
    >
      <textarea
        data-testid="message-input"
        placeholder="chat.messageTo"
      />
      <button
        data-testid="send-button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`ChatView > Snapshots > should match snapshot with typing indicator 1`] = `
<div>
  <div
    class="flex flex-col h-full min-h-0 relative"
  >
    <header
      class="h-14  px-4 flex items-center border-b border-fluux-bg shadow-sm gap-3"
    >
      <div
        data-testid="avatar"
      >
        Alice Smith
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h2
          class="font-semibold text-fluux-text truncate leading-tight"
        >
          Alice Smith
        </h2>
        <p
          class="text-xs text-fluux-muted truncate"
        >
          Online
        </p>
      </div>
    </header>
    <div
      class="focus-zone flex-1 flex flex-col min-h-0 p-1"
      tabindex="0"
    >
      <div
        class="relative flex-1 flex flex-col min-h-0"
      >
        <div
          class="flex-1 overflow-y-auto overflow-x-hidden px-4 pt-4 pb-0 overscroll-contain"
          style="overflow-anchor: auto;"
        >
          <div
            class="flex-1 flex items-center justify-center text-fluux-muted h-full"
          >
            <p>
              chat.noMessages
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="message-composer"
    >
      <textarea
        data-testid="message-input"
        placeholder="chat.messageTo"
      />
      <button
        data-testid="send-button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
